test/corpus/fail/M0082.mo
=========
M0082.mo
=========

for (x in true) {}

---

(source_file
  (exp_dec
    (for_exp
      (var_pat
        (identifier))
      (lit_exp
        (bool_literal))
      (block_exp))))
